--- a/src/main/g8/Dockerfile
+++ b/src/main/g8/Dockerfile
@@ -1,23 +1,29 @@
-# https://sveltesociety.dev/recipes/publishing-and-deploying/dockerize-a-svelte-app
-FROM node:19 AS build
-
+FROM node:20-slim AS base
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
+COPY . /app
 WORKDIR /app
 
-# conditionally copy node_modules if available (e.g. we've done a local build)
-# see https://stackoverflow.com/questions/31528384/conditional-copy-add-in-dockerfile
-COPY package.json package-lock.jso[n] yarn.loc[k] node_module[s] ./
+FROM base AS prod-deps
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
 
-RUN yarn install
-COPY . ./
-RUN yarn run build
+FROM base AS build
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+RUN pnpm run build
 
+# NOTE:
+# The above was lifted nearly verbatim from https://pnpm.io/docker
+#
+# We run using nginx rather than node (below), with a performance 
+# and maturity assumption as to that preference, but that hasn't 
+# been tested/confirmed
+#
 FROM nginx:1.19-alpine
 COPY --from=build /app/public /usr/share/nginx/html
 
 EXPOSE 3000
 
-# svelte will create random IDs for our gnerated components, e.g. "dist/assets/index-65be3931.css"
-# we rename in our build for conssitent IDs
 COPY --from=build /app/target/assets/css/index.css /usr/share/nginx/html/bundle.css
 COPY --from=build /app/target/assets/js/bundle.js /usr/share/nginx/html/bundle.js
 COPY --from=build /app/target/index.html /usr/share/nginx/html/index.html
