--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-remote_theme: pages-themes/leap-day@v0.2.0
-plugins:
-- jekyll-remote-theme
-title: Kind Giter8 Widget Template
+theme: minima
+minima:
+  color_scheme: "midnight"
+  font: "serif"
+title: Data-Mesh Svelte Widget Template
 show_downloads: false
