--- a/src/main/g8/.github/workflows/build-web.yml
+++ b/src/main/g8/.github/workflows/build-web.yml
@@ -37,7 +37,9 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
-          tags: \${{ env.REGISTRY_IMAGE }}:build-\${{github.run_number}}
+          tags: |
+            \${{ env.REGISTRY_IMAGE }}:latest-build
+            \${{ env.REGISTRY_IMAGE }}:build-\${{github.run_number}}
       - name: Build if Main
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
