--- a/src/main/g8/k8s/web.yaml
+++ b/src/main/g8/k8s/web.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: $widget;format="lower,hyphen"$-web
-        image: $org;format="lower"$/$image$:latest-build
+        image: $org;format="lower"$/$image$:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
